Crash when remeshing object with mirror modifier #126808

Closed
opened 2024-08-27 03:09:26 +02:00 by Sean Kim · 2 comments
Member

System Information
Operating system: Linux-6.8.11-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.78

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-26 17:11, hash: bb24677a76ce
Worked: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-20 21:47, hash: ef0b163b498e

Short description of error
As title says, using the voxel remesher on an object with a Mirror modifier causes blender to crash.

Exact steps for others to reproduce the error

  1. Open attached file
  2. Click Remesh -> Remesh
**System Information** Operating system: Linux-6.8.11-200.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.78 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-26 17:11, hash: `bb24677a76ce` Worked: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-20 21:47, hash: `ef0b163b498e` **Short description of error** As title says, using the voxel remesher on an object with a Mirror modifier causes blender to crash. **Exact steps for others to reproduce the error** 1. Open attached file 2. Click Remesh -> Remesh
Hans Goudey changed title from Sculpt when remeshing object with mirror modifier to Crash when remeshing object with mirror modifier 2024-08-27 03:10:44 +02:00
Author
Member

In debug mode I get the following assert:

BLI_assert failed: source/blender/blenkernel/intern/pbvh.cc:2773, vert_positions_eval(), at 'ss.deform_cos.size() == mesh_orig.verts_num'
In debug mode I get the following assert: ``` BLI_assert failed: source/blender/blenkernel/intern/pbvh.cc:2773, vert_positions_eval(), at 'ss.deform_cos.size() == mesh_orig.verts_num' ```
Author
Member

Bad commit is 5fdf7deb57

CC @HooglyBoogly

Bad commit is 5fdf7deb57e809dea2d7aeff3a9036bca0d5aa51 CC @HooglyBoogly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-26 23:30:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126808
No description provided.